Cache bamboo plans a bit longer

--- a/info.plist
+++ b/info.plist
@@ -1,354 +1,354 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>bundleid</key>
-	<string>com.codebud7.alfred-bamboo</string>
-	<key>category</key>
-	<string>Productivity</string>
-	<key>connections</key>
-	<dict>
-		<key>0DB32D92-DF64-454F-8FAF-CFFE59D49B14</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>2912156C-3813-4A73-A977-19733F4E692B</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>6D2E3386-19BD-4790-8793-D30BB6C31F78</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>AFADD3CE-E432-42C0-A681-7C0B9F46F6ED</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-			<dict>
-				<key>destinationuid</key>
-				<string>9CEFCEF1-3A3A-4814-AFA0-A6BAFE479515</string>
-				<key>modifiers</key>
-				<integer>262144</integer>
-				<key>modifiersubtext</key>
-				<string>Open deployment overview</string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-			<dict>
-				<key>destinationuid</key>
-				<string>F4070D7D-CD61-4A57-8DB5-BFEC0321087A</string>
-				<key>modifiers</key>
-				<integer>1048576</integer>
-				<key>modifiersubtext</key>
-				<string>Open branch overview</string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>E3C2E343-158E-4342-B245-98BA5C9F0DDC</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>22194E76-09C0-44DD-AF94-F44ED048A4C6</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-	</dict>
-	<key>createdby</key>
-	<string>Sebastian Puskeiler</string>
-	<key>description</key>
-	<string>Alfred workflow for Atlassian Bamboo plan handling.</string>
-	<key>disabled</key>
-	<false/>
-	<key>name</key>
-	<string>alfred-bamboo</string>
-	<key>objects</key>
-	<array>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>browser</key>
-				<string></string>
-				<key>spaces</key>
-				<string></string>
-				<key>url</key>
-				<string>{query}</string>
-				<key>utf8</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.openurl</string>
-			<key>uid</key>
-			<string>AFADD3CE-E432-42C0-A681-7C0B9F46F6ED</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>alfredfiltersresults</key>
-				<false/>
-				<key>alfredfiltersresultsmatchmode</key>
-				<integer>0</integer>
-				<key>argumenttreatemptyqueryasnil</key>
-				<false/>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>0</integer>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>keyword</key>
-				<string>boo</string>
-				<key>queuedelaycustom</key>
-				<integer>3</integer>
-				<key>queuedelayimmediatelyinitially</key>
-				<true/>
-				<key>queuedelaymode</key>
-				<integer>0</integer>
-				<key>queuemode</key>
-				<integer>2</integer>
-				<key>runningsubtext</key>
-				<string>Searching...</string>
-				<key>script</key>
-				<string>./node_modules/.bin/run-node index.js "$1"</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string>index.js</string>
-				<key>subtext</key>
-				<string>Type in the build plan you're looking for.</string>
-				<key>title</key>
-				<string>alfred-bamboo</string>
-				<key>type</key>
-				<integer>0</integer>
-				<key>withspace</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.scriptfilter</string>
-			<key>uid</key>
-			<string>6D2E3386-19BD-4790-8793-D30BB6C31F78</string>
-			<key>version</key>
-			<integer>3</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>query=$1
+  <dict>
+    <key>bundleid</key>
+    <string>com.codebud7.alfred-bamboo</string>
+    <key>category</key>
+    <string>Productivity</string>
+    <key>connections</key>
+    <dict>
+      <key>0DB32D92-DF64-454F-8FAF-CFFE59D49B14</key>
+      <array>
+        <dict>
+          <key>destinationuid</key>
+          <string>2912156C-3813-4A73-A977-19733F4E692B</string>
+          <key>modifiers</key>
+          <integer>0</integer>
+          <key>modifiersubtext</key>
+          <string/>
+          <key>vitoclose</key>
+          <false/>
+        </dict>
+      </array>
+      <key>6D2E3386-19BD-4790-8793-D30BB6C31F78</key>
+      <array>
+        <dict>
+          <key>destinationuid</key>
+          <string>AFADD3CE-E432-42C0-A681-7C0B9F46F6ED</string>
+          <key>modifiers</key>
+          <integer>0</integer>
+          <key>modifiersubtext</key>
+          <string/>
+          <key>vitoclose</key>
+          <false/>
+        </dict>
+        <dict>
+          <key>destinationuid</key>
+          <string>9CEFCEF1-3A3A-4814-AFA0-A6BAFE479515</string>
+          <key>modifiers</key>
+          <integer>262144</integer>
+          <key>modifiersubtext</key>
+          <string>Open deployment overview</string>
+          <key>vitoclose</key>
+          <false/>
+        </dict>
+        <dict>
+          <key>destinationuid</key>
+          <string>F4070D7D-CD61-4A57-8DB5-BFEC0321087A</string>
+          <key>modifiers</key>
+          <integer>1048576</integer>
+          <key>modifiersubtext</key>
+          <string>Open branch overview</string>
+          <key>vitoclose</key>
+          <false/>
+        </dict>
+      </array>
+      <key>E3C2E343-158E-4342-B245-98BA5C9F0DDC</key>
+      <array>
+        <dict>
+          <key>destinationuid</key>
+          <string>22194E76-09C0-44DD-AF94-F44ED048A4C6</string>
+          <key>modifiers</key>
+          <integer>0</integer>
+          <key>modifiersubtext</key>
+          <string/>
+          <key>vitoclose</key>
+          <false/>
+        </dict>
+      </array>
+    </dict>
+    <key>createdby</key>
+    <string>Sebastian Puskeiler</string>
+    <key>description</key>
+    <string>Alfred workflow for Atlassian Bamboo plan handling.</string>
+    <key>disabled</key>
+    <false/>
+    <key>name</key>
+    <string>alfred-bamboo</string>
+    <key>objects</key>
+    <array>
+      <dict>
+        <key>config</key>
+        <dict>
+          <key>browser</key>
+          <string/>
+          <key>spaces</key>
+          <string/>
+          <key>url</key>
+          <string>{query}</string>
+          <key>utf8</key>
+          <true/>
+        </dict>
+        <key>type</key>
+        <string>alfred.workflow.action.openurl</string>
+        <key>uid</key>
+        <string>AFADD3CE-E432-42C0-A681-7C0B9F46F6ED</string>
+        <key>version</key>
+        <integer>1</integer>
+      </dict>
+      <dict>
+        <key>config</key>
+        <dict>
+          <key>alfredfiltersresults</key>
+          <false/>
+          <key>alfredfiltersresultsmatchmode</key>
+          <integer>0</integer>
+          <key>argumenttreatemptyqueryasnil</key>
+          <false/>
+          <key>argumenttrimmode</key>
+          <integer>0</integer>
+          <key>argumenttype</key>
+          <integer>0</integer>
+          <key>escaping</key>
+          <integer>102</integer>
+          <key>keyword</key>
+          <string>boo</string>
+          <key>queuedelaycustom</key>
+          <integer>3</integer>
+          <key>queuedelayimmediatelyinitially</key>
+          <true/>
+          <key>queuedelaymode</key>
+          <integer>0</integer>
+          <key>queuemode</key>
+          <integer>2</integer>
+          <key>runningsubtext</key>
+          <string>Searching...</string>
+          <key>script</key>
+          <string>./node_modules/.bin/run-node index.js "$1"</string>
+          <key>scriptargtype</key>
+          <integer>1</integer>
+          <key>scriptfile</key>
+          <string>index.js</string>
+          <key>subtext</key>
+          <string>Update available: 1.4.2 → 1.4.3. Run `npm install -g alfred-bamboo`</string>
+          <key>title</key>
+          <string>alfred-bamboo</string>
+          <key>type</key>
+          <integer>0</integer>
+          <key>withspace</key>
+          <true/>
+        </dict>
+        <key>type</key>
+        <string>alfred.workflow.input.scriptfilter</string>
+        <key>uid</key>
+        <string>6D2E3386-19BD-4790-8793-D30BB6C31F78</string>
+        <key>version</key>
+        <integer>3</integer>
+      </dict>
+      <dict>
+        <key>config</key>
+        <dict>
+          <key>concurrently</key>
+          <false/>
+          <key>escaping</key>
+          <integer>102</integer>
+          <key>script</key>
+          <string>query=$1
 
 open $query/deployments</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>type</key>
-				<integer>0</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>9CEFCEF1-3A3A-4814-AFA0-A6BAFE479515</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>query=$1
+          <key>scriptargtype</key>
+          <integer>1</integer>
+          <key>scriptfile</key>
+          <string/>
+          <key>type</key>
+          <integer>0</integer>
+        </dict>
+        <key>type</key>
+        <string>alfred.workflow.action.script</string>
+        <key>uid</key>
+        <string>9CEFCEF1-3A3A-4814-AFA0-A6BAFE479515</string>
+        <key>version</key>
+        <integer>2</integer>
+      </dict>
+      <dict>
+        <key>config</key>
+        <dict>
+          <key>concurrently</key>
+          <false/>
+          <key>escaping</key>
+          <integer>102</integer>
+          <key>script</key>
+          <string>query=$1
 
 open $query/branches</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>type</key>
-				<integer>0</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>F4070D7D-CD61-4A57-8DB5-BFEC0321087A</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>argumenttype</key>
-				<integer>0</integer>
-				<key>keyword</key>
-				<string>boo-auth</string>
-				<key>subtext</key>
-				<string>Just add the authentication to your bamboo host's.</string>
-				<key>text</key>
-				<string>alfred-bamboo auth configuration</string>
-				<key>withspace</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.keyword</string>
-			<key>uid</key>
-			<string>E3C2E343-158E-4342-B245-98BA5C9F0DDC</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>./node_modules/.bin/run-node configAuth.js $1</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>type</key>
-				<integer>0</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>22194E76-09C0-44DD-AF94-F44ED048A4C6</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>argumenttype</key>
-				<integer>0</integer>
-				<key>keyword</key>
-				<string>boo-host</string>
-				<key>subtext</key>
-				<string>Just add your bamboo host's.</string>
-				<key>text</key>
-				<string>alfred-bamboo host configuration</string>
-				<key>withspace</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.keyword</string>
-			<key>uid</key>
-			<string>0DB32D92-DF64-454F-8FAF-CFFE59D49B14</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>./node_modules/.bin/run-node configHost.js $1</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string>configHost.js</string>
-				<key>type</key>
-				<integer>8</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>2912156C-3813-4A73-A977-19733F4E692B</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-	</array>
-	<key>readme</key>
-	<string></string>
-	<key>uidata</key>
-	<dict>
-		<key>0DB32D92-DF64-454F-8FAF-CFFE59D49B14</key>
-		<dict>
-			<key>xpos</key>
-			<integer>70</integer>
-			<key>ypos</key>
-			<integer>560</integer>
-		</dict>
-		<key>22194E76-09C0-44DD-AF94-F44ED048A4C6</key>
-		<dict>
-			<key>xpos</key>
-			<integer>270</integer>
-			<key>ypos</key>
-			<integer>430</integer>
-		</dict>
-		<key>2912156C-3813-4A73-A977-19733F4E692B</key>
-		<dict>
-			<key>xpos</key>
-			<integer>270</integer>
-			<key>ypos</key>
-			<integer>560</integer>
-		</dict>
-		<key>6D2E3386-19BD-4790-8793-D30BB6C31F78</key>
-		<dict>
-			<key>xpos</key>
-			<integer>70</integer>
-			<key>ypos</key>
-			<integer>130</integer>
-		</dict>
-		<key>9CEFCEF1-3A3A-4814-AFA0-A6BAFE479515</key>
-		<dict>
-			<key>xpos</key>
-			<integer>330</integer>
-			<key>ypos</key>
-			<integer>130</integer>
-		</dict>
-		<key>AFADD3CE-E432-42C0-A681-7C0B9F46F6ED</key>
-		<dict>
-			<key>xpos</key>
-			<integer>330</integer>
-			<key>ypos</key>
-			<integer>10</integer>
-		</dict>
-		<key>E3C2E343-158E-4342-B245-98BA5C9F0DDC</key>
-		<dict>
-			<key>xpos</key>
-			<integer>70</integer>
-			<key>ypos</key>
-			<integer>430</integer>
-		</dict>
-		<key>F4070D7D-CD61-4A57-8DB5-BFEC0321087A</key>
-		<dict>
-			<key>xpos</key>
-			<integer>330</integer>
-			<key>ypos</key>
-			<integer>260</integer>
-		</dict>
-	</dict>
-	<key>version</key>
-	<string>1.4.1</string>
-	<key>webaddress</key>
-	<string>https://github.com/codebud7/alfred-bamboo#readme</string>
-</dict>
+          <key>scriptargtype</key>
+          <integer>1</integer>
+          <key>scriptfile</key>
+          <string/>
+          <key>type</key>
+          <integer>0</integer>
+        </dict>
+        <key>type</key>
+        <string>alfred.workflow.action.script</string>
+        <key>uid</key>
+        <string>F4070D7D-CD61-4A57-8DB5-BFEC0321087A</string>
+        <key>version</key>
+        <integer>2</integer>
+      </dict>
+      <dict>
+        <key>config</key>
+        <dict>
+          <key>argumenttype</key>
+          <integer>0</integer>
+          <key>keyword</key>
+          <string>boo-auth</string>
+          <key>subtext</key>
+          <string>Update available: 1.4.2 → 1.4.3. Run `npm install -g alfred-bamboo`</string>
+          <key>text</key>
+          <string>alfred-bamboo auth configuration</string>
+          <key>withspace</key>
+          <true/>
+        </dict>
+        <key>type</key>
+        <string>alfred.workflow.input.keyword</string>
+        <key>uid</key>
+        <string>E3C2E343-158E-4342-B245-98BA5C9F0DDC</string>
+        <key>version</key>
+        <integer>1</integer>
+      </dict>
+      <dict>
+        <key>config</key>
+        <dict>
+          <key>concurrently</key>
+          <false/>
+          <key>escaping</key>
+          <integer>102</integer>
+          <key>script</key>
+          <string>./node_modules/.bin/run-node configAuth.js $1</string>
+          <key>scriptargtype</key>
+          <integer>1</integer>
+          <key>scriptfile</key>
+          <string/>
+          <key>type</key>
+          <integer>0</integer>
+        </dict>
+        <key>type</key>
+        <string>alfred.workflow.action.script</string>
+        <key>uid</key>
+        <string>22194E76-09C0-44DD-AF94-F44ED048A4C6</string>
+        <key>version</key>
+        <integer>2</integer>
+      </dict>
+      <dict>
+        <key>config</key>
+        <dict>
+          <key>argumenttype</key>
+          <integer>0</integer>
+          <key>keyword</key>
+          <string>boo-host</string>
+          <key>subtext</key>
+          <string>Update available: 1.4.2 → 1.4.3. Run `npm install -g alfred-bamboo`</string>
+          <key>text</key>
+          <string>alfred-bamboo host configuration</string>
+          <key>withspace</key>
+          <true/>
+        </dict>
+        <key>type</key>
+        <string>alfred.workflow.input.keyword</string>
+        <key>uid</key>
+        <string>0DB32D92-DF64-454F-8FAF-CFFE59D49B14</string>
+        <key>version</key>
+        <integer>1</integer>
+      </dict>
+      <dict>
+        <key>config</key>
+        <dict>
+          <key>concurrently</key>
+          <false/>
+          <key>escaping</key>
+          <integer>102</integer>
+          <key>script</key>
+          <string>./node_modules/.bin/run-node configHost.js $1</string>
+          <key>scriptargtype</key>
+          <integer>1</integer>
+          <key>scriptfile</key>
+          <string>configHost.js</string>
+          <key>type</key>
+          <integer>8</integer>
+        </dict>
+        <key>type</key>
+        <string>alfred.workflow.action.script</string>
+        <key>uid</key>
+        <string>2912156C-3813-4A73-A977-19733F4E692B</string>
+        <key>version</key>
+        <integer>2</integer>
+      </dict>
+    </array>
+    <key>readme</key>
+    <string/>
+    <key>uidata</key>
+    <dict>
+      <key>0DB32D92-DF64-454F-8FAF-CFFE59D49B14</key>
+      <dict>
+        <key>xpos</key>
+        <integer>70</integer>
+        <key>ypos</key>
+        <integer>560</integer>
+      </dict>
+      <key>22194E76-09C0-44DD-AF94-F44ED048A4C6</key>
+      <dict>
+        <key>xpos</key>
+        <integer>270</integer>
+        <key>ypos</key>
+        <integer>430</integer>
+      </dict>
+      <key>2912156C-3813-4A73-A977-19733F4E692B</key>
+      <dict>
+        <key>xpos</key>
+        <integer>270</integer>
+        <key>ypos</key>
+        <integer>560</integer>
+      </dict>
+      <key>6D2E3386-19BD-4790-8793-D30BB6C31F78</key>
+      <dict>
+        <key>xpos</key>
+        <integer>70</integer>
+        <key>ypos</key>
+        <integer>130</integer>
+      </dict>
+      <key>9CEFCEF1-3A3A-4814-AFA0-A6BAFE479515</key>
+      <dict>
+        <key>xpos</key>
+        <integer>330</integer>
+        <key>ypos</key>
+        <integer>130</integer>
+      </dict>
+      <key>AFADD3CE-E432-42C0-A681-7C0B9F46F6ED</key>
+      <dict>
+        <key>xpos</key>
+        <integer>330</integer>
+        <key>ypos</key>
+        <integer>10</integer>
+      </dict>
+      <key>E3C2E343-158E-4342-B245-98BA5C9F0DDC</key>
+      <dict>
+        <key>xpos</key>
+        <integer>70</integer>
+        <key>ypos</key>
+        <integer>430</integer>
+      </dict>
+      <key>F4070D7D-CD61-4A57-8DB5-BFEC0321087A</key>
+      <dict>
+        <key>xpos</key>
+        <integer>330</integer>
+        <key>ypos</key>
+        <integer>260</integer>
+      </dict>
+    </dict>
+    <key>version</key>
+    <string>1.4.1</string>
+    <key>webaddress</key>
+    <string>https://github.com/codebud7/alfred-bamboo#readme</string>
+  </dict>
 </plist>
