Remove unused dependencies

--- a/package.json
+++ b/package.json
@@ -24,17 +24,13 @@
   ],
   "keywords": [
     "alfred",
-    "workflow",
-    ""
+    "workflow"
   ],
   "dependencies": {
     "alfred-link": "^0.3.1",
     "alfred-notifier": "^0.2.3",
     "alfy": "^0.10.0",
-    "axios": "^0.21.1",
-    "bluebird": "^3.7.2",
-    "request": "^2.3.4",
-    "request-promise": "^4.1.1"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0"
