--- a/info.plist
+++ b/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
   <dict>
     <key>bundleid</key>
-    <string>com.codebud7.alfred-bamboo</string>
+    <string>li.klass.alfred-bamboo</string>
     <key>category</key>
     <string>Productivity</string>
     <key>connections</key>
